# cognidev-aiagents

./: README.md  pyproject.toml  pytest.ini  requirements.txt  test-requirements.txt
docker/: Dockerfile  Dockerfile.test  docker-compose.yml
docker/services/: requirements.txt
docker/services/order-service/: Dockerfile
docker/services/order-service/src/: main.py
docker/services/user-service/: Dockerfile
docker/services/user-service/src/: main.py
docs/milestones/: milestone-1.md
docs/specs/: ai-agents-specification.md
examples/pipelines/: github-issues.yaml
scripts/: run-tests.sh
src/service/: main.py
src/tools/api/: base.py  factory.py
src/tools/api/clients/: rest.py
src/tools/api/models/: config.py
src/workflow/: schema.yaml
test-reports/: report.html
tests/: conftest.py
tests/fixtures/: api.py
tests/integration/: test_api_endpoints.py
tests/unit/tools/api/: test_factory.py  test_rest_client.py
