[tool.poetry]
name = "cognidev-aiagents"
version = "0.1.0"
description = "Enterprise AI Agents System with API Tool Implementation"
authors = ["Cognidev Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
httpx = "^0.26.0"
pydantic = "^2.6.0"
gql = "^3.5.0"
grpcio = "^1.60.0"
pyyaml = "^6.0.1"
uvicorn = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
